--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -10,14 +10,22 @@
                     <a href="#" class="nav-link" aria-current="page">Home</a>
                 </li>
             </ul>
-            <span class="navbar-text">
-                {% if user.is_authenticated %}
-                    {{ user.username }}, 
-                    <a href="{% url 'logout' %}">Logout</a>
-                {% else %}
+            {% if user.is_authenticated %}
+                <ul class="navbar-nav">
+                    <li class="nav-item dropdown    ">
+                        <a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            {{ user.username }}
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            {% else %}
+                <span class="navbar-text">
                     <a href="{% url 'login' %}">Login</a>
-                {% endif %}
-            </span>            
+                </span>
+            {% endif %}
         </div>    
     </div>
 </nav>
