--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -5,3 +5,11 @@ html, body {
 body {
     background: #fdfdf1;
 }
+
+.blog-navbar {
+  border-bottom: 1px solid rgba(0,0,0, 0.175);
+  border-left: 1px solid rgba(0,0,0, 0.175);
+  border-right: 1px solid rgba(0,0,0, 0.175);
+  border-bottom-right-radius: 0.375rem;
+  border-bottom-left-radius: 0.375rem;
+}
