--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -1,13 +1,13 @@
-<nav class="navbar  navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary mb-2 blog-navbar">
     <div class="container-fluid">
-        <a href="#" class="navbar-brand">Blog</a>
+        <a href="{% url 'index' %}" class="navbar-brand">Blog</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a href="#" class="nav-link" aria-current="page">Home</a>
+                    <a href="{% url 'index' %}" class="nav-link" aria-current="page">Home</a>
                 </li>
             </ul>
             {% if user.is_authenticated %}
@@ -17,14 +17,20 @@
                             {{ user.username }}
                         </a>
                         <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
                             <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
             {% else %}
-                <span class="navbar-text">
-                    <a href="{% url 'login' %}">Login</a>
-                </span>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Log in</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'register' %}">Registration</a>
+                    </li>
+                </ul>
             {% endif %}
         </div>    
     </div>
