--- a/blog/templates/accounts/profile.html
+++ b/blog/templates/accounts/profile.html
@@ -37,7 +37,9 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-9 col-lg-10">
-                            {% block profile_content %}{% endblock profile_content %}
+                            {% block profile_content %}
+
+                            {% endblock profile_content %}
                         </div>
                     </div>
                 </div>
