--- a/blog/templates/accounts/article_list.html
+++ b/blog/templates/accounts/article_list.html
@@ -1,13 +1,13 @@
 {% extends 'accounts/profile.html' %}
 
 {% block profile_list %}
-    <a href="{% url 'profile' %}" class="list-group-item list-group-item-action">Articles</a>
+    <a href="{% url 'profile' %}" class="list-group-item list-group-item-action list-group-item-secondary">Articles</a>
     <a href="{% url 'email_change' %}" class="list-group-item list-group-item-action">Email</a>
-    <a href="{% url 'password_change' %}" class="list-group-item list-group-item-action list-group-item-secondary">Password change</a>
+    <a href="{% url 'password_change' %}" class="list-group-item list-group-item-action">Password change</a>
 {% endblock profile_list %}
 
 {% block profile_content %}
-    <form action="{% url 'password_change' %}" method="POST" style="max-width: 300px;">
+    <form method="POST" style="max-width: 300px;">
         {% csrf_token %}
         {% for field in form %}
         <div class="mb-3">
@@ -18,7 +18,6 @@
             {% endfor %}
         </div>
         {% endfor %}
-        <p><a href="{% url 'password_reset' %}">Forgot password?</a></p>
-        <button class="btn btn-primary" type="submit">Update password</button>
+        <button class="btn btn-primary" type="submit">Update email</button>
     </form>
 {% endblock profile_content %}
