--- a/blog/templates/accounts/email_change.html
+++ b/blog/templates/accounts/email_change.html
@@ -1,6 +1,7 @@
 {% extends 'accounts/profile.html' %}
 
 {% block profile_list %}
+    <a href="{% url 'profile' %}" class="list-group-item list-group-item-action">Articles</a>
     <a href="{% url 'email_change' %}" class="list-group-item list-group-item-action list-group-item-secondary">Email</a>
     <a href="{% url 'password_change' %}" class="list-group-item list-group-item-action">Password change</a>
 {% endblock profile_list %}
