Add article view

--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -18,7 +18,8 @@ body {
   text-decoration: None;
 }
 
-.article-preview-footer {
+.article-preview-footer,
+.article-header {
   color: #adb5bd;
 }
 .options_dropdown {
