--- a/blog/static/blog/style.css
+++ b/blog/static/blog/style.css
@@ -28,3 +28,9 @@ body {
 .options_dropdown::after {
   border: none;
 }
+
+.footer {
+  background: #f8f9fa;
+  color: #adb5bd;
+  border-top: 1px solid rgba(0,0,0, 0.175);
+}
