Rename model field from pud_date to pub_date

--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -38,7 +38,7 @@
                                 <div>Author: {{ article.author.username }}</div>
                             </div>
                             <div class="col-12 col-sm-6 text-end">
-                                <div>Publication date: {{ article.pud_date|date:"m.d.y" }} at {{ article.pud_date|date:"H:i" }}</div>
+                                <div>Publication date: {{ article.pub_date|date:"m.d.y" }} at {{ article.pub_date|date:"H:i" }}</div>
                             </div>
                         </div>
                     </div>
