--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -38,7 +38,9 @@
                                 <div>Author: {{ article.author.username }}</div>
                             </div>
                             <div class="col-12 col-sm-6 text-end">
-                                <div>Publication date: {{ article.pub_date|date:"m.d.y" }} at {{ article.pub_date|date:"H:i" }}</div>
+                                <div>Published:
+                                    <span class="publication-date">{{ article.pub_date|date:"m/d/Y H:i" }} UTC</span>
+                                </div>
                             </div>
                         </div>
                     </div>
