--- a/blog/templates/article.html
+++ b/blog/templates/article.html
@@ -20,12 +20,14 @@
                         <div>Author: {{ article.author.username }}</div>
                     </div>
                     <div class="col-12 col-sm-6 text-end">
-                        <div>Publication date: {{ article.pub_date|date:"m.d.y" }} at {{ article.pub_date|date:"H:i" }}</div>
+                        <div>Published:
+                            <span class="publication-date">{{ article.pub_date|date:"m/d/Y H:i" }} UTC</span>
+                        </div>
                     </div>
                 </div>
-                <h4 class="card-title">
+                <h1 class="card-title">
                     {{ article.title }}
-                </h4>
+                </h1>
                 <div>
                     {% for tag in article.tags.names %}
                         <a href="#">{{tag}}</a>
