--- a/blog/templates/accounts/password_change.html
+++ b/blog/templates/accounts/password_change.html
@@ -4,6 +4,8 @@
     <a href="{% url 'profile' %}" class="list-group-item list-group-item-action">Articles</a>
     <a href="{% url 'email_change' %}" class="list-group-item list-group-item-action">Email</a>
     <a href="{% url 'password_change' %}" class="list-group-item list-group-item-action list-group-item-secondary">Password change</a>
+    <a href="{% url 'avatar' %}" class="list-group-item list-group-item-action">Avatar</a>
+
 {% endblock profile_list %}
 
 {% block profile_content %}
