--- a/blog/templates/accounts/profile.html
+++ b/blog/templates/accounts/profile.html
@@ -26,7 +26,16 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2">
                             <div class="text-center">
-                                <img src="https://via.placeholder.com/200" class="img-thumbnail mb-2" alt="profile picture">
+                                <div class='avatar-wrapper mb-2'>
+                                    {% if user.profile.avatar.url %}
+                                        <img src="{{ user.profile.avatar.url }}" class="img-thumbnail mb-2" alt="profile picture">
+                                    {% else %}
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="180" height="180" fill="currentColor" class="bi bi-person-bounding-box" viewBox="0 0 16 16">
+                                            <path d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1h-3zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5zM.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5zm15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5z"/>
+                                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                                      </svg>
+                                    {% endif %}
+                                </div>
                                 <h4>{{ user.username }}</h4>
                             </div>
                             <div class="list-group list-group-flush mb-3">
@@ -34,6 +43,8 @@
                                     <a href="{% url 'profile' %}" class="list-group-item list-group-item-action list-group-item-secondary">Articles</a>
                                     <a href="{% url 'email_change' %}" class="list-group-item list-group-item-action">Email</a>
                                     <a href="{% url 'password_change' %}" class="list-group-item list-group-item-action">Password change</a>
+                                    <a href="{% url 'avatar' %}" class="list-group-item list-group-item-action">Avatar</a>
+
                                 {% endblock profile_list %}
                             </div>
                         </div>
