--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -10,6 +10,16 @@
                     <a href="{% url 'index' %}" class="nav-link" aria-current="page">Home</a>
                 </li>
             </ul>
+            <form method="GET" action="{% url 'search' %}" class="d-flex me-2" role="search">
+                <div class="input-group">
+                    <input class="form-control" type="search" name="q" placeholder="Search" aria-label="Search" required="">
+                    <button class="btn btn-outline-secondary" type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                        </svg>
+                    </button>
+                </div>
+            </form>
             {% if user.is_authenticated %}
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown    ">
