--- a/blog/templates/navbar.html
+++ b/blog/templates/navbar.html
@@ -7,7 +7,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a href="{% url 'index' %}" class="nav-link" aria-current="page">Home</a>
+                    <a href="{% url 'index' %}" class="nav-link" aria-current="page">All</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'category' category='articles' %}" class="nav-link" aria-current="page">Articles</a>
+                </li>
+                <li class="nav-item">
+                    <a href="{% url 'category' category='news' %}" class="nav-link" aria-current="page">News</a>
                 </li>
             </ul>
             <form method="GET" action="{% url 'search' %}" class="d-flex me-2" role="search">
