--- a/blog/templates/accounts/profile.html
+++ b/blog/templates/accounts/profile.html
@@ -40,11 +40,7 @@
                             </div>
                             <div class="list-group list-group-flush mb-3">
                                 {% block profile_list %}
-                                    <a href="{% url 'profile' %}" class="list-group-item list-group-item-action list-group-item-secondary">Articles</a>
-                                    <a href="{% url 'email_change' %}" class="list-group-item list-group-item-action">Email</a>
-                                    <a href="{% url 'password_change' %}" class="list-group-item list-group-item-action">Password change</a>
-                                    <a href="{% url 'avatar' %}" class="list-group-item list-group-item-action">Avatar</a>
-
+                                    {% include "profile_menu.html" with active="profile" %}
                                 {% endblock profile_list %}
                             </div>
                         </div>
